# troupe

./: LICENSE  README.md  cabal.haskell-ci  cabal.project
.github/workflows/: codestyle.yml  dependabot.yml  haddock-coverage.awk  haddock-coverage.yml  haskell-ci.yml
troupe/: .hlint.yaml  CHANGELOG.md  LICENSE  troupe.cabal
troupe/src/: MyLib.hs  Troupe.hs
troupe/src/Troupe/: Exceptions.hs  Process.hs  Queue.hs  Types.hs
troupe/test/: troupe-test.hs
troupe/test/Troupe/: Test.hs
troupe/test/Troupe/Queue/: Test.hs
