cabal-version:      3.0
build-type:         Simple
name:               troupe
version:            0.1.0.0
synopsis:           Haskell Actors
description:        A library bringing Erlang-style processes to Haskell
homepage:           https://github.com/NicolasT/troupe
bug-reports:        https://github.com/NicolasT/troupe/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nicolas Trangez
maintainer:         ikke@nicolast.be
copyright:          (c) 2023, Nicolas Trangez
category:           Concurrency
stability:          alpha
extra-doc-files:    CHANGELOG.md
extra-source-files: .hlint.yaml
tested-with:        GHC ==9.4.4 || ==9.6.1

source-repository head
  type:     git
  location: https://github.com/NicolasT/troupe.git
  subdir:   troupe

flag werror
  description: Turn compiler warnings into errors.
  default:     False
  manual:      True

common warnings
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -Wmissing-home-modules -Widentities
    -Wredundant-constraints -Wcpp-undef -Wmissing-export-lists

  cc-options:  -Wall -Wextra -pedantic

  if flag(werror)
    ghc-options: -Werror -optc=-Werror
    cc-options:  -Werror

library
  import:           warnings
  exposed-modules:  Troupe
  other-modules:
    Troupe.Exceptions
    Troupe.Process
    Troupe.Types

  build-depends:
    , async                       ^>=2.2.4
    , base                        ^>=4.17.0.0 || ^>=4.18.0.0
    , deepseq                     ^>=1.4.8.0
    , deferred-folds              ^>=0.9.18.3
    , hashable                    ^>=1.4.2.0
    , monad-time                  ^>=0.4.0.0
    , MonadRandom                 ^>=0.6
    , mtl                         ^>=2.2.2    || ^>=2.3.1
    , primitive                   ^>=0.8.0.0
    , random                      ^>=1.2.1.1
    , safe-exceptions             ^>=0.1.7.3
    , stm                         ^>=2.5.1.0
    , stm-containers              ^>=1.2.0.2
    , transformers                ^>=0.5.6.2  || ^>=0.6.1.0
    , troupe-distributed-process

  hs-source-dirs:   src
  default-language: Haskell2010

-- Vendored code from the `distributed-process` library
library troupe-distributed-process
  import:           warnings

  if flag(werror)
    ghc-options: -Wwarn

  exposed-modules:  Control.Distributed.Process.Internal.CQueue
  other-modules:
    Control.Distributed.Process.Internal.StrictList
    Control.Distributed.Process.Internal.StrictMVar

  build-depends:
    , base  ^>=4.17.0.0 || ^>=4.18.0.0
    , stm   ^>=2.5.1.0

  hs-source-dirs:   troupe-distributed-process
  default-language: Haskell2010

test-suite troupe-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          troupe-test.hs
  other-modules:    Troupe.Test
  ghc-options:      -rtsopts -threaded -with-rtsopts=-N2
  build-depends:
    , base             ^>=4.17.0.0 || ^>=4.18.0.0
    , clock            ^>=0.8.3
    , deepseq          ^>=1.4.8.0
    , safe-exceptions  ^>=0.1.7.3
    , tasty            ^>=1.4.3
    , tasty-hunit      ^>=0.10.0.3
    , transformers     ^>=0.5.6.2  || ^>=0.6.1.0
    , troupe
